--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <title>PRANJAL NOOB</title>
 </head>
 <body>
+  <font size=7>
 <center>Pranjal is Noob Confirmed</center>
-
-<button><a href="ipl.pranjalnoob.tk">Click for IPL</a></button>
+  </font>
